fixed header nav overflow styling

--- a/_structure.scss
+++ b/_structure.scss
@@ -40,6 +40,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        flex-shrink: 0.5;
         height: $height-nav;
     }
     & &__logo-container img {
@@ -112,15 +113,18 @@
         &__links-container {
             // Add `!important` to override jQuery animation inline style, if present
             display: block !important;
+            min-width: 0;
         }
         &__links {
             flex-direction: row;
             padding: 0;
+            margin-left: $baseunit * 1.5;
 
             &:before {
                 display: none;
             }
             & > * {
+                min-width: 0;
                 margin-right: $baseunit;
 
                 &:last-child {
@@ -128,6 +132,8 @@
                 }
             }
             .menu-item a {
+                @include scut-truncate;
+
                 position: relative;
                 font-weight: $font-weight-normal;
 
